# Airtest

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  README_cn.md  README_zh.md  README_zh.rst  __init__.py  adbclient.py  ai_plot.py  airtest_runner.py  core.py  main.py  moa.py  moatool.py  pyproject.toml  requirements.txt  runtest.bat  runtest.sh  runtestpy2.bat  setup.py  update README.md  ycwrevise.txt
.spyproject/: workspace.ini
airtest/: __init__.py  __main__.py  cli.py  exthook.py
benchmark/: README.md  README_cn.md  benchmark.py  plot.py  profile_recorder.py  requirements.txt
core/: kouritsu.py  main.py  settings.py  utils.py
docs/: Makefile  README.md  README.rst  README_MORE.rst  api.rst  build.bat  build.sh  build_zh_CN.bat  conf.py  index.rst  index_cn.rst  install.bat  install.sh  make.bat  modules.rst  quickstart.rst  readme.md  readme.rst  requirements.txt  update_locale_po.bat
docs-autogen/: objects.inv  search.html
docs-release/: README.html  genindex.html  index.html  objects.inv  searchindex.js
docs-release-en/: .buildinfo  README.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs-release-zh/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: test_android.py  test_forever.py  test_main.py
g18script/: g18_test.py
localrunner/: report.html  reporttpl.html  result.json  run.py  utils.py
moa/: __init__.py  __main__.py  airtest_runner.py  core.py  error.py  moa.py  (+13 more)
(+1166 files in other folders)
