[tool.poetry]
name = "airtest"
version = "1.2.3"
description = ""
authors = ["王明 <trevor0@zto.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pywinauto = {version="^0.6.8",markers = "sys_platform == 'win32'"}
opencv-contrib-python = ""
facebook-wda = "^1.4.3"
Jinja2 =">=2.8"
Pillow =">=3.4.0"
requests=">=2.11.1"
six=""
mss ="==4.0.3"
numpy= "<=1.19.3"
[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
